--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <h1 class="titlebox">  Natalie Eyny  </h1>
 <h2 class="titledisc"> Designer   |   Photographer </h2>
-
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body >
@@ -12,12 +11,43 @@
 <div class="row">
   <div class="column">
     <p2> LANDSCAPES</p2>
-
+    <br />
+      <img class="imgnatalie" src="image/ocean1.png" alt="Picture of Natalie Eyny" />
   </div>
   <div class="column">
     <p2> PORTRAITS </p2>
+    <br />
+      <img class="imgnatalie" src="image/natalie.png" alt="Picture of Natalie Eyny" />
   </div>
 </div>
+
+<button class="button1">PRESS </button>
+
+
+
+
+
+
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  x[slideIndex-1].style.display = "block";
+}
+</script>
 
 
 </body>
