--- a/index.html
+++ b/index.html
@@ -12,19 +12,52 @@
   <div class="column">
     <p2> LANDSCAPES</p2>
     <br />
-      <img class="imgnatalie" src="image/ocean1.png" alt="Picture of Natalie Eyny" />
+    <div class="imgnatalie1">
+      <img class="mySlides" src="image/ocean1.png" >
+      <img class="mySlides" src="image/natalie.png">
+      <button class="button1" onclick="plusDivs1(-1)">&#10094;</button>
+      <button class="button2" onclick="plusDivs1(1)">&#10095;</button>
+    </div>
   </div>
   <div class="column">
     <p2> PORTRAITS </p2>
     <br />
-      <img class="imgnatalie" src="image/natalie.png" alt="Picture of Natalie Eyny" />
+      <div class="imgnatalie">
+        <img class="mySlides1" src="image/beach1.png" >
+        <img class="mySlides1" src="image/beach.png">
+        <button class="button3" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="button4" onclick="plusDivs(1)">&#10095;</button>
+      </div>
   </div>
 </div>
 
-<button class="button1">PRESS </button>
 
 
 
+
+
+
+
+
+<script>
+var slideIndex = 1;
+showDivs1(slideIndex);
+
+function plusDivs1(n) {
+  showDivs1(slideIndex += n);
+}
+
+function showDivs1(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  x[slideIndex-1].style.display = "block";
+}
+</script>
 
 
 
@@ -39,7 +72,7 @@ function plusDivs(n) {
 
 function showDivs(n) {
   var i;
-  var x = document.getElementsByClassName("mySlides");
+  var x = document.getElementsByClassName("mySlides1");
   if (n > x.length) {slideIndex = 1}
   if (n < 1) {slideIndex = x.length}
   for (i = 0; i < x.length; i++) {
