--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <p2> LANDSCAPES</p2>
     <br />
       <div class="imgnatalie1">
-        <img class="mySlides" src="image/desert1.png">
+        
         <img class="mySlides" src="image/desert.png">
+        <img class="mySlides" src="image/desert1.png">
         <img class="mySlides" src="image/natalie.png">
           <button class="button1" onclick="plusDivs1(-1)">&#10094;</button>
-          <p4 class="tooltip1">COLLECTION 1</p4>
+          <div class="popup1" onclick="myFunction1()">Collection 1
+            <span class="popuptext1" id="myPopup1">2001 collection of Israels desert</span>
+          </div>
           <button class="button2" onclick="plusDivs1(1)">&#10095;</button>
       </div>
   </div>
@@ -29,7 +32,9 @@
         <img class="mySlides1" src="image/beach.png">
         <img class="mySlides1" src="image/ocean1.png">
           <button class="button3" onclick="plusDivs(-1)">&#10094;</button>
-          <p4 class="tooltip2">COLLECTION 2</p4>
+          <div class="popup" onclick="myFunction()">Collection 2
+            <span class="popuptext" id="myPopup">1999 collection of Israels beachs</span>
+          </div>
           <button class="button4" onclick="plusDivs(1)">&#10095;</button>
       </div>
   </div>
@@ -82,7 +87,17 @@ function showDivs(n) {
 </script>
 
 <!-- script for tooltip -->
+<script>
+function myFunction() {
+  var popup = document.getElementById("myPopup");
+  popup.classList.toggle("show");
+}
 
+function myFunction1() {
+  var popup1 = document.getElementById("myPopup1");
+  popup1.classList.toggle("show1");
+}
+</script>
 
 
 
