--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <button class="button4" onclick="plusDivs(1)">&#10095;</button>
       </div>
       <div class="imgnatalie3">
-        <img class="mySlides3" src="image/ice1.png" alt="picture of jungle">
+        <img class="mySlides3" src="https://raw.githubusercontent.com/danieleyny/NatalieEyny/master/ice1.png" alt="picture of jungle">
         <img class="mySlides3" src="image/ice2.png" alt="picture of jungle">
         <img class="mySlides3" src="image/ice.png" alt="picture of jungle">
           <button class="button7" onclick="plusDivs3(-1)">&#10094;</button>
