button error test

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">LossLess</span>
                             <a href="https://lsls.app/"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="https://lsls.app/" class="button-portfolio">View Website</a>
+                            <a href="https://lsls.app/" class="button">View Website</a>
                         </div>
                     </div>
 
