button error fix

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Pips Rewards</span>
                             <a href="https://www.pipsrewards.com/"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="https://www.pipsrewards.com/" class="button-portfolio">View Website</a>
+                            <a href="https://www.pipsrewards.com/" class="button">View Website</a>
                         </div>
                     </div>
 
@@ -285,7 +285,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Tal Company</span>
                             <a href="http://ny-apts.com/"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="http://ny-apts.com/" class="button-portfolio">View Website</a>
+                            <a href="http://ny-apts.com/" class="button">View Website</a>
                         </div>
                     </div>
 
@@ -294,7 +294,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Happiness In Chaos Photoshoot</span>
                             <a href="#contact"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="#contact" class="button-portfolio">Request Photos</a>
+                            <a href="#contact" class="button">Request Photos</a>
                         </div>
                     </div>
 
@@ -311,7 +311,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Kumala</span>
                             <a href="https://danieleyny.github.io/Kumala/"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="https://danieleyny.github.io/Kumala/" class="button-portfolio">View Websites</a>
+                            <a href="https://danieleyny.github.io/Kumala/" class="button">View Websites</a>
                         </div>
                     </div>
 
@@ -320,7 +320,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Novelution</span>
                             <a href="http://www.novelution.com/"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="http://www.novelution.com/" class="button-portfolio">View Website</a>
+                            <a href="http://www.novelution.com/" class="button">View Website</a>
                         </div>
                     </div>
 
@@ -329,7 +329,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Soccer Photoshoot</span>
                             <a href="#contact"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="#contact" class="button-portfolio">Request Photos</a>
+                            <a href="#contact" class="button">Request Photos</a>
                         </div>
                     </div>
 
@@ -338,7 +338,7 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">SafeChoice</span>
                             <a href="https://danieleyny.github.io/SafeChoice/"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="https://danieleyny.github.io/SafeChoice/" class="button-portfolio">View Website</a>
+                            <a href="https://danieleyny.github.io/SafeChoice/" class="button">View Website</a>
                         </div>
                     </div>
 
@@ -347,16 +347,16 @@
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Morshoda Photoshoot</span>
                             <a href="#contact"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="#contact" class="button-portfolio">Request Photos</a>
+                            <a href="#contact" class="button">Request Photos</a>
                         </div>
                     </div>
 
                     <div class="portfolio__content mix app">
-                        <a href="#contact"><img src="assets/img/Portratephoto.png" alt="" class="portfolio__img"></a>
+                        <a href="#contact"><img src="assets/img/portratephoto.png" alt="" class="portfolio__img"></a>
                         <div class="portfolio__data">
                             <span class="portfolio__subtitle">Portrait Photoshoot</span>
                             <a href="#contact"><h2 class="portfolio__title">New portfolio of work done for a client.</h2></a>
-                            <a href="#contact" class="button-portfolio">Request Photos</a>
+                            <a href="#contact" class="button">Request Photos</a>
                         </div>
                     </div>
                 </div>
